spacing fix services

--- a/src/App.css
+++ b/src/App.css
@@ -329,7 +329,7 @@ h3 {
  .skills-section-card-content {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   gap: 32px;
   align-self: stretch;
  }
